cluster/apps/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/version: sha256_ca6af7a18d712
  name: kavita
spec:
  selector:
    app.kubernetes.io/name: kavita
  ports:
  - name: http-kavita
    port: 5000
    targetPort: 5000
